w06 - project fix contrast color

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -46,6 +46,7 @@ nav {
     background-color: var(--color4);
     display: flex;
     justify-content: center;
+    font-weight: 600;
 }
 
 nav ul {
@@ -162,8 +163,9 @@ footer p {
     justify-content: space-between;
     padding: 1rem;
     gap: 1.5rem;
-    background-color: var(--color4);
+    background-color: var(--color5);
     border-radius: 10px;
+    font-weight: 600;
 }
 
 .food-card h2 {
